homework finished except for the final win loss part

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 <h1>Star Wars RPG!</h1>
 
 <div class = "characters">
-<div class = "obi-wan"><img src = "assets/images/obi-wan.jpg" class = "heroes">
-<h5 class = "name">Obi-Wan Kenobi</h5><h5 class = "HP">120</h5></div>
+<div class = "obi-wan frame"><img src = "assets/images/obi-wan.jpg" class = "heroes hero1">
+<h5 class = "name">Obi-Wan Kenobi</h5><h5 class="HP first">120</h5></div>
 
-<div class = "luke-skywalker"><img src = "assets/images/luke-skywalker.jpg" class = "heroes">
-<h5 class = "name">Luke Skywalker</h5><h5 class = "HP">100</h5></div>
+<div class = "luke-skywalker frame"><img src = "assets/images/luke-skywalker.jpg" class = "heroes hero2">
+<h5 class = "name">Luke Skywalker</h5><h5 class="HP second">100</h5></div>
 
-<div class = "darth-sidious"><img src = "assets/images/darth-sidious.jpg" class = "heroes">
-<h5 class = "name">Darth Sidious</h5><h5 class = "HP">150</h5></div>
+<div class = "darth-sidious frame"><img src = "assets/images/darth-sidious.jpg" class = "heroes hero3">
+<h5 class = "name">Darth Sidious</h5><h5 class="HP third">150</h5></div>
 
-<div class = "darth-maul"><img src = "assets/images/darth-maul.jpg" class = "heroes">
-<h5 class = "name">Darth Maul</h5><h5 class = "HP">180</h5></div>
+<div class = "darth-maul frame"><img src = "assets/images/darth-maul.jpg" class = "heroes hero4">
+<h5 class = "name">Darth Maul</h5><h5 class="HP fourth">180</h5></div>
 </div>
 
 <div class = "display">
+<div class = "stats">Open console to see stats of battle.</div>
 <h2 id = "Character">Your Character</h2>
 <div class = "yourCharacter"></div>
 <h2 id="enemies">Enemies Available to Attack</h2>
@@ -35,7 +36,7 @@
 <button id = "attack">Attack</button>
 <h2 id = "defender">Defender</h2>
 <div class = "defender"></div>
-<div class = "stats"></div>
+
 <button id="restart">Restart</button>
 </div>
 <script src="assets/javascript/game.js">
